# acf_rides

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  pages.md  todo.txt
public/: drive_or_ride.html  events.html  index.html  login.html  manifest.json  signup.html  style.css  summary_data.js  upcoming_events.js
src/: db.rs  email.rs  lib.rs  main.rs  models.rs  rides_finder.rs  webserver.rs  worker.rs
src/sql/: assign_rider.sql  create_driver.sql  create_event.sql  create_reset.sql  create_ride.sql  create_user.sql  create_vehicle.sql  delete_event.sql  delete_expired_events.sql  delete_expired_invites.sql  delete_old_events.sql  delete_reset.sql  delete_user_drives.sql  delete_user_rides.sql  delete_user_rides_drives.sql  events_info.sql  get_available_drivers.sql  get_driver_events.sql  get_driver_passengers.sql  get_driver_vehicles.sql  get_event_driver.sql  get_events.sql  get_invite.sql  get_request.sql  get_rider_events.sql  get_riders.sql  get_unassigned_riders.sql  get_user.sql  get_user_by_email.sql  get_vehicle.sql  init_database.sql  set_password.sql  update_event.sql
templates/: check_email.html  drive_or_ride.html  driver_summary.html  events.html  index.html  info.html  login.html  manage_events.html  pickup.html  reset_password.html  rider_summary.html  seats.html  set_password.html  signup.html  summary.html  summary_data.html  upcoming_events.html  vehicles.html
