[package]
name = "rides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26"
log = "0.4"
actix-web = "4"
actix-session = {version="0.6", features=["cookie-session"]}
env_logger = "0.9"
uuid = {version="*", features=["v4"]}
chrono = "*"
bcrypt = "*"
serde = {version="*", features=["derive"]}
askama = {version="0.8"}
