[package]
name = "rides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26"
log = "0.4"
tokio = "1"
actix-web = "4"
actix-session = {version="0.6", features=["cookie-session"]}
actix-files = "0.6"
simple_logger = "2"
uuid = {version="*", features=["v4"]}
chrono = "*"
bcrypt = "*"
serde = {version="*", features=["derive"]}
askama_actix = "0.13"
askama = {version="0.11", features=["with-actix-web"]}
dotenv = "0.15"
lazy_static = "1"
